--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <meta property="og:description" content="You got a Valentine's Day message from your friend. Click the link above to see it!"/>
 
 
-  <link href="css/mb.YTVPlayer.css" media="all" rel="stylesheet" type="text/css">
+  <link href="mb.YTVPlayer.css" media="all" rel="stylesheet" type="text/css">
   <style type="text/css">
     body{
       margin:0;
@@ -46,8 +46,8 @@
 
   </style>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script type="text/javascript" src="inc/jquery.metadata.js"></script>
-  <script type="text/javascript" src="inc/jquery.mb.YTPlayer.js"></script>
+  <script type="text/javascript" src="jquery.metadata.js"></script>
+  <script type="text/javascript" src="jquery.mb.YTPlayer.js"></script>
   <script type="text/javascript">
     $(function(){
       $(".movie").mb_YTPlayer();
